# statistics-api

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  catalog.yml  template.yml
src/: db.rs  main.rs  models.rs  uuid.rs
