[package]
name = "srg-statistics-api"
version = "0.1.0"
authors = ["hasegawa_takuya_xa <hasegawa_takuya_xa@cyberagent.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_derive = "1.0"
mysql = "*"